--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Happy birthday</title>
+  <title>Happy Birthday To You</title>
   
   <link rel="stylesheet" href="style.css">
 </head>
